# remote-workstreams

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT_BRIEF.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
deploy/: com.remote-workstreams.server.plist.template  com.tailscale.userspace.plist.template  com.voicecode.server.plist.template
docs/: README.md  architecture.md  configuration.md  contributing.md  data-model.md  deployment.md  development.md  infrastructure.md  interfaces.md  operations.md  permissions.md  quickstart.md  security.md  storage.md  troubleshooting.md
evals/: __init__.py  bridge.py  mockclient.py
hooks/: ask_phone.py
remote_workstreams/: ambient.py  bootstrap.py  config.py  convo.py  engines.py  keychain.py  protocol.py  rollout.py  substrate.py  transcript.py
tests/: conftest.py  server_fakes.py  test_ambient.py  test_api.py  test_approvals.py  test_ask_phone.py  test_audio_chunker.py  test_auth.py  test_bootstrap.py  test_cartesia_tts.py  test_chunker.py  test_claude_code_adapter.py  test_claude_code_distill.py  test_config.py  test_conversation.py  test_convo.py  test_deepgram_stt.py  test_deploy_scripts.py  test_dispatch.py  test_echo.py  test_events.py  test_integration_assembly.py  test_integration_engine_pipeline.py  test_integration_server_assembly.py  test_live_convo.py  test_moonshine_stt.py  test_moonshine_tts.py  test_pipeline.py  test_plugins.py  test_protocol.py  test_rollout.py  test_roundtrip.py  test_sessions.py  test_state.py  test_store.py  test_substrate.py  test_transcript.py  test_web_assets.py  (+2 more)
(+102 files in other folders)
