[project]
name = "remote-workstreams"
version = "0.1.0"
description = "Voice interface for Claude Code — Mac is the brain, iPhone is a thin terminal, Tailscale is the wire."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "GPL-3.0-only"
authors = [{ name = "Ryan Scheinberg" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "deepgram-sdk>=3.7",
    "cartesia>=2.0",
    "sounddevice>=0.5",
    "webauthn>=2.0",
    "qrcode>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remote_workstreams"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
